app.js and datatable js conflict soling

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "axios": "^0.27",
         "bootstrap": "^5.2",
         "bootstrap-icons": "^1.6.1",
-        "jquery": "^3.6",
+        "datatables.net": "^1.13.4",
+        "jquery": "^3.7.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
