--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "laravelcollective/html": "^6.4",
+        "maatwebsite/excel": "^1.1",
         "spatie/laravel-permission": "^5.9"
     },
     "require-dev": {
