--- a/.env.example
+++ b/.env.example
@@ -28,13 +28,14 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=587
+MAIL_USERNAME=heinyarzar.smpt@gmail.com
+MAIL_PASSWORD=qjemzibjwjrdgyrv
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=heinyarzar464@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
